# showcase-vendingmachine

./: README.md  config.py  pyproject.toml
app/: __init__.py  environment.py  errors.py  keys.py
app/auth/: __init__.py  auth_constants.py  jwt_auth.py
app/models/: __init__.py
app/rest/: __init__.py  products.py  rest_models.py  users.py  utils.py
scripts/: start.sh
tests/: conftest.py  utils.py
tests/rest/: test_products.py  test_users.py
tests/unit/: test_models.py
