[tool.poetry]
name = "app"
version = "0.1.0"
description = "Showcase vending machine API"
authors = ["Andrii Makarenko <andriismakarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
