[tool.poetry]
name = "app"
version = "0.1.0"
description = "Showcase vending machine API"
authors = ["Andrii Makarenko <andriismakarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
flask-restx = "^1.0.3"
wtforms-json = "^0.3.5"
pyjwt = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
