[tool.poetry]
name = "app"
version = "0.1.0"
description = "Showcase vending machine API"
authors = ["Andrii Makarenko <andriismakarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
flask-restx = "^1.0.3"
wtforms-json = "^0.3.5"
pyjwt = "^2.6.0"
pytest-flask = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.messages_control]

max-line-length = 160

disable = [
  "missing-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
  "no-member",
  "too-few-public-methods",
  "missing-function-docstring",
  "too-many-arguments",
  "fixme",
  "unused-argument",
  "duplicate-code",
  "broad-except",
  "bare-except",
  "invalid-name",
  "super-with-arguments",
  "no-else-return",
]
